tests/baselines/reference/declarationMapsWithoutDeclaration(strict=true).errors.txt
error TS5069: Option 'declarationMap' cannot be specified without specifying option 'declaration' or option 'composite'.
declarationMapsWithoutDeclaration.ts(3,10): error TS7006: Parameter 'res' implicitly has an 'any' type.
declarationMapsWithoutDeclaration.ts(3,15): error TS7006: Parameter 'req' implicitly has an 'any' type.
declarationMapsWithoutDeclaration.ts(3,20): error TS7006: Parameter 'next' implicitly has an 'any' type.
declarationMapsWithoutDeclaration.ts(18,10): error TS2454: Variable 'm2' is used before being assigned.


!!! error TS5069: Option 'declarationMap' cannot be specified without specifying option 'declaration' or option 'composite'.
==== declarationMapsWithoutDeclaration.ts (4 errors) ====
    module m2 {
        export interface connectModule {
            (res, req, next): void;
             ~~~
!!! error TS7006: Parameter 'res' implicitly has an 'any' type.
                  ~~~
!!! error TS7006: Parameter 'req' implicitly has an 'any' type.
                       ~~~~
!!! error TS7006: Parameter 'next' implicitly has an 'any' type.
        }
        export interface connectExport {
            use: (mod: connectModule) => connectExport;
            listen: (port: number) => void;
        }
    
    }
    
    var m2: {
        (): m2.connectExport;
        test1: m2.connectModule;
        test2(): m2.connectModule;
    };
    
    export = m2;
             ~~
!!! error TS2454: Variable 'm2' is used before being assigned.